[gd_scene load_steps=2 format=3 uid="uid://itklondnxi0"]

[ext_resource type="Script" uid="uid://cwhb6cyuxwn7v" path="res://UI/user_profile.gd" id="1_i6c4w"]

[node name="UserProfile" type="Node2D"]
script = ExtResource("1_i6c4w")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProfileContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 70.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/ProfileContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
